[tool.poetry]
name = "mazegen"
version = "1.0.0"

packages = [
    { include = "mazegen" },
    { include = "config_validator"},
]

[[tool.mypy.overrides]]
module = ["mlx.*", "sortedcontainers.*", "pynput.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.poetry.dependencies]
python = "^3.10"
sortedcontainers = "^2.4.0"
pydantic = "^2.12.5"
pynput = "^1.8.1"
sortedcontainers-stubs = "^2.4.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mlx.*", "sortedcontainers.*", "pynput.*"]
ignore_missing_imports = true

[tool.flake8]
exclude = [".venv", "__pycache__", ".mypy_cache"]
